Exclude internal documentation and development files from public mirror
- Documents/ folder contains internal architecture and development notes
- Various debug and temporary files excluded
- Files remain locally but won't sync to public mirror

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,12 @@ wheels/
 *.egg
 MANIFEST
 
+# Internal documentation (not for public mirror)
+Documents/
+deleteme.txt
+ArchitecturePrompt.txt
+build.txt
+
 # macOS files
 .DS_Store
 .DS_Store?
